@@ -113,7 +113,7 @@ chisq.test <- function(x, y = NULL, correct = TRUE,
 	if(simulate.p.value) {
 	    setMETH()
 	    nx <- length(x)
-	    sm <- matrix(sample(1L:nx,B*n,TRUE,prob=p),nrow=n)
+	    sm <- matrix(sample.int(nx, B*n, TRUE, prob = p),nrow = n)
 	    ss <- apply(sm, 2L, function(x,E,k) {
 		sum((table(factor(x, levels=1L:k)) - E)^2 / E)
 	    }, E = E, k = nx)
